--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,12 @@ mark,
 
 .img-fluid {
   max-width: 100%;
-  height: auto; }
+  height: auto;
+  width: 200px;
+  height: 200px;
+  /* you need to match the shadow color to your background or image border for the desired effect*/
+  box-shadow: 0 0 8px 8px white inset; 
+}
 
 .img-thumbnail {
   padding: 0.25rem;
